glx/testdata/invalid/missing-required-fields/media/media-with-filepath.glx
media:
  media-with-filepath:
    file_path: "media/photos/photo.jpg"
    mime_type: "image/jpeg"


